maj arbre famille oedipe tp clingo 1 IA

--- a/src/HAI710I_Intelligence_Artificielle/assets/module_header.tex
+++ b/src/HAI710I_Intelligence_Artificielle/assets/module_header.tex
@@ -2,6 +2,8 @@
 \usepackage{caption}
 \usepackage{listings}
 \usepackage{xcolor}
+\usepackage{fontawesome5} % for crown icon
+\usepackage{pgfornament} % for ornament decoration
 % ----- Clingo / ASP language definition -----
 \lstdefinelanguage{clingo}{
     keywords={not},
