--- a/src/HAI710I_Intelligence_Artificielle/tp_clingo/tp_main.tex
+++ b/src/HAI710I_Intelligence_Artificielle/tp_clingo/tp_main.tex
@@ -29,13 +29,25 @@
     \addcontentsline{toc}{section}{\nameref{sec:TP1}}
     \setcounter{section}{1}
     \setcounter{tdcounter}{0}
-    \input{../tp_clingo/tp_1.tex}
+    \input{./tp_1.tex}
 
     \newpage
     \section*{TP2 --- Clingo avancé}\label{sec:TP2}
     \addcontentsline{toc}{section}{\nameref{sec:TP2}}
     \setcounter{section}{2}
     \setcounter{tdcounter}{0}
-    \input{../tp_clingo/tp_2.tex}
+    \input{./tp_2.tex}
+
+    \newpage
+    \section*{TP3 --- Controle continu}\label{sec:TP3}
+    \addcontentsline{toc}{section}{\nameref{sec:TP3}}
+    \setcounter{section}{3}
+    \setcounter{tdcounter}{0}
+    \input{./tp_3.tex}
+
+
+
+    \newpage
+    \input{./annexes.tex}
 \end{document}
 
